# mylibrary

./: CMakeLists.txt  README.md  README_RU.md  meson.build  ru.mail.bobilev_yury.MyLibrary.desktop  ru.mail.bobilev_yury.MyLibrary.omp.desktop
MLBookProc/: CMakeLists.txt  MLBookProcConfig.cmake.in
MLBookProc/MLBookProc/: genres.csv
MLBookProc/XMLParserCPP/: CMakeLists.txt  XMLParserCPPConfig.cmake.in
MLBookProc/XMLParserCPP/include/: CMakeLists.txt  XMLAlgorithms.h  XMLElement.h  XMLElementAttribute.h  XMLParserCPP.h  XMLTextEncoding.h
MLBookProc/XMLParserCPP/src/: CMakeLists.txt  XMLAlgorithms.cpp  XMLElement.cpp  XMLElementAttribute.cpp  XMLParserCPP.cpp  XMLTextEncoding.cpp
MLBookProc/cmake_modules/: FindDJVU.cmake
MLBookProc/include/: ARCHParser.h  AddBook.h  ArchEntry.h  ArchiveFileEntry.h  ArchiveParser.h  ArchiveRemoveEntry.h  AuxFunc.h  BaseID.h  BaseKeeper.h  BookBaseEntry.h  BookInfo.h  BookInfoEntry.h  BookMarks.h  BookParseEntry.h  BookmarksKeeper.h  ByteOrder.h  CMakeLists.txt  CreateCollection.h  DCParser.h  DJVUContext.h  DJVUParser.h  DublinCoreParser.h  EPUBParser.h  ElectroBookInfoEntry.h  FB2Parser.h  FileParseEntry.h  FormatAnnotation.h  Genre.h  GenreGroup.h  Hasher.h  InpxLoader.h  LibArchive.h  LibArchiveFileData.h  MLBookProc.h  MLException.h  NotesBaseEntry.h  NotesKeeper.h  ODTParser.h  OmpLockGuard.h  OpenBook.h  (+9 more)
MLBookProc/omp_test/: CMakeLists.txt  main.cpp
MLBookProc/omp_test_offloading/: CMakeLists.txt  main.cpp
MLBookProc/pthread_test/: CMakeLists.txt  main.cpp
MLBookProc/src/: ARCHParser.cpp  AddBook.cpp  ArchEntry.cpp  ArchiveFileEntry.cpp  ArchiveParser.cpp  ArchiveRemoveEntry.cpp  AuxFunc.cpp  BaseID.cpp  BaseKeeper.cpp  BookBaseEntry.cpp  BookInfo.cpp  BookInfoEntry.cpp  BookMarks.cpp  BookParseEntry.cpp  BookmarksKeeper.cpp  ByteOrder.cpp  CMakeLists.txt  CreateCollection.cpp  DCParser.cpp  DJVUContext.cpp  DJVUParser.cpp  DublinCoreParser.cpp  EPUBParser.cpp  ElectroBookInfoEntry.cpp  FB2Parser.cpp  FileParseEntry.cpp  FormatAnnotation.cpp  Genre.cpp  GenreGroup.cpp  Hasher.cpp  InpxLoader.cpp  LibArchive.cpp  LibArchiveFileData.cpp  MLBookProc.cpp  MLException.cpp  NotesBaseEntry.cpp  NotesKeeper.cpp  ODTParser.cpp  OmpLockGuard.cpp  OpenBook.cpp  (+9 more)
MLBookProc/stdexecution_test/: CMakeLists.txt  main.cpp
MLBookProc/vector_test/: CMakeLists.txt  main.cpp
MLPlugin/: CMakeLists.txt  MLPluginConfig.cmake.in
MLPlugin/examples/: ExamplePlugin.cpp  ExamplePlugin.h
MLPlugin/genres/: genre_groups.csv  genres.csv
MLPlugin/include/: Bases.h  CMakeLists.txt  GenreBase.h  MLPlugin.h
MLPlugin/src/: Bases.cpp  CMakeLists.txt  GenreBase.cpp  MLPlugin.cpp
MLPluginIfc/: CMakeLists.txt  Doxyfile  MLPluginIfcConfig.cmake.in
MLPluginIfc/examples/: ExamplePlugin.cpp  ExamplePlugin.h
MLPluginIfc/include/: CMakeLists.txt  MLPlugin.h
MLPluginIfc/src/: MLPlugin.cpp
MyLibrary/: MLStyles.css  genre_groups.csv  genres.csv  mainWindow.css
include/: ARCHParser.h  AboutWindow.h  AddBook.h  AddBookGui.h  AddBookModelItem.h  AddBooksWindow.h  AnnotationCover.h  ArchiveFileEntry.h  ArchiveRemoveEntry.h  AuthorEditWindow.h  AuthorsModel.h  AuxFunc.h  AuxWindows.h  BaseKeeper.h  BookBaseEntry.h  BookDetailsWindow.h  BookInfo.h  BookInfoEntry.h  BookInfoGui.h  BookMarks.h  BookMarksGui.h  BookMarksModel.h  BookMarksModelItem.h  BookMarksShow.h  BookMarksWindow.h  BookOpWindows.h  BookParseEntry.h  BooksWindow.h  ByteOrder.h  CMakeLists.txt  CollectionBaseExportWindow.h  CollectionBaseImportWindow.h  CollectionCrProcessGui.h  CollectionCreationProcWindow.h  CollectionOpWindows.h  CollectionRefreshingProcWindow.h  ColorButton.h  CopyBookGui.h  CoverPixBuf.h  CoverWidget.h  (+85 more)
mlbookproc/: CMakeLists.txt  MLBookProcConfig.cmake.in
mlbookproc/include/: ARCHParser.h  ArchiveFileEntry.h  ArchiveRemoveEntry.h  AuxFunc.h  BaseKeeper.h  BookMarks.h  BookParseEntry.h  CMakeLists.txt  CreateCollection.h  EPUBParser.h  FB2Parser.h  FileParseEntry.h  FormatAnnotation.h  Genre.h  GenreGroup.h  Hasher.h  LibArchive.h  MLException.h  NotesBaseEntry.h  NotesKeeper.h  OpenBook.h  RefreshCollection.h  SelfRemovingPath.h  XMLParser.h  XMLTag.h
mlbookproc/src/: ARCHParser.cpp  AddBook.cpp  ArchiveFileEntry.cpp  AuxFunc.cpp  BaseKeeper.cpp  BookBaseEntry.cpp  BookInfo.cpp  BookMarks.cpp  CMakeLists.txt  CreateCollection.cpp  DJVUParser.cpp  EPUBParser.cpp  ElectroBookInfoEntry.cpp  FB2Parser.cpp  FileParseEntry.cpp  FormatAnnotation.cpp  GenreGroup.cpp  Hasher.cpp  LibArchive.cpp  MLException.cpp  NotesBaseEntry.cpp  NotesKeeper.cpp  OpenBook.cpp  PDFParser.cpp  RefreshCollection.cpp  RemoveBook.cpp  XMLParser.cpp  XMLTag.cpp  ZipFileEntry.cpp
mlpluginifc/: CMakeLists.txt  MLPluginIfcConfig.cmake.in
mlpluginifc/include/: MLPlugin.h
mlpluginifc/src/: CMakeLists.txt  MLPlugin.cpp
po/: MyLibrary.po  meson.build  ru.po
resources/: mainmenu.gresource.xml  mainmenu.xml  meson.build  resources.cpp
src/: ARCHParser.cpp  AboutWindow.cpp  AddBook.cpp  AddBookGui.cpp  AddBookModelItem.cpp  AddBooksWindow.cpp  AnnotationCover.cpp  ArchiveFileEntry.cpp  ArchiveRemoveEntry.cpp  AuthorEditWindow.cpp  AuthorsModel.cpp  AuxFunc.cpp  AuxWindows.cpp  BaseKeeper.cpp  BookBaseEntry.cpp  BookDetailsWindow.cpp  BookInfo.cpp  BookInfoEntry.cpp  BookInfoGui.cpp  BookMarks.cpp  BookMarksGui.cpp  BookMarksModel.cpp  BookMarksModelItem.cpp  BookMarksShow.cpp  BookMarksWindow.cpp  BookOpWindows.cpp  BookParseEntry.cpp  BooksWindow.cpp  ByteOrder.cpp  CMakeLists.txt  CollectionBaseExportWindow.cpp  CollectionBaseImportWindow.cpp  CollectionCrProcessGui.cpp  CollectionCreationProcWindow.cpp  CollectionOpWindows.cpp  CollectionRefreshingProcWindow.cpp  ColorButton.cpp  CopyBookGui.cpp  CoverPixBuf.cpp  CoverWidget.cpp  (+87 more)
styles/: styles.css
translations/: MyLibrary_ru_RU.ts
